add: header title with nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
 		<title>B-Hotel</title>
 	</head>
 	<body>
+		<header>
+			<nav>
+				<h1 class="header-title">B-Hotel title</h1>
+				<ul>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#rooms">Rooms</a></li>
+					<li><a href="cuisine">Cuisine</a></li>
+					<li><a href="#events">Events</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+
 		<script src="app.js"></script>
 	</body>
 </html>
