fix: update header title for consistency

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<nav>
-				<h1 class="header-title">B-Hotel title</h1>
+				<h1 class="header-title">B-Hotel</h1>
 				<ul>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#rooms">Rooms</a></li>
