add: create hotel section with welcome message and description

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
 			</nav>
 		</header>
 
+		<section id="hotel">
+			<div class="hotel-container"></div>
+			<h1 class="typing-effect">Welcome to our Hotel!</h1>
+			<br />
+			<p class="hotel-text1">
+				We are a luxury hotel located in the heart of the city. Our
+				rooms are designed to provide you with the best comfort and
+				relaxation. We have a team of professional staff who are always
+				ready to assist you with anything you need. Our hotel also
+				offers a variety of cuisines to satisfy your taste buds. We have
+				a range of events happening throughout the year that you can
+				enjoy. Contact us to book your stay now!
+			</p>
+		</section>
+
 		<script src="app.js"></script>
 	</body>
 </html>
