add: include welcoming message in hotel section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 				a range of events happening throughout the year that you can
 				enjoy. Contact us to book your stay now!
 			</p>
+			<br />
+			<p class="hotel-text2">We are looking forward to welcoming you</p>
 		</section>
 
 		<script src="app.js"></script>
