add: add reservation button in hotel section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			</p>
 			<br />
 			<p class="hotel-text2">We are looking forward to welcoming you</p>
+			<button class="hotel-button">Reserve your Room</button>
 		</section>
 
 		<script src="app.js"></script>
